#### Include Test Sources in this Directory
# Copy the subpackage __init__ to the build dir
python_sources = [
  '__init__.py',
  'co2_data',
  'co2_results_double',
  'co2_results_real',
  'gas_data',
  'gas_result',
  'madeup_data',
  'madeup_result',
  'test_loess.py'
]

py3.install_sources(
  python_sources,
  subdir: 'skmisc/loess/tests'
)
